add favicon XDD

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="src/css/Material+Icons.css">
     <link rel="stylesheet" href="src/css/notosanstc.css">
     <link rel="stylesheet" href="src/css/vue-material.css" />
+    <link rel="bookmark" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>DEMO_Sample</title>
     <style>
         body {
