--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/css/all.min.css">
-    <link rel="bookmark" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="bookmark" href="favicon.ico?update=20170106" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico?update=20170106" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico?update=20170106" type="image/x-icon" />
     <title>DEMO_Sample</title>
     <style>
         body {
             font-family: "LiHei Pro", "Noto Sans TC", "微軟正黑體", "Microsoft JhengHei", sans-serif !important;
-            font-size: 16px;
+            font-size: 15px;
             font-weight: 900;
             height: 100%;
         }
